Configure monorepo settings with private mode and workspaces

--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "todo-app",
   "version": "1.0.0",
   "description": "",
+  "private": true,
+  "workspaces": [
+    "packages/*"
+  ],
   "main": "index.js",
   "scripts": {
     "lint": "eslint . --ext .ts,.tsx",
