--- a/packages/backend/tsconfig.json
+++ b/packages/backend/tsconfig.json
@@ -3,10 +3,11 @@
     "target": "ES2020",
     "module": "commonjs",
     "outDir": "./dist",
-    "rootDir": "./src",
+    "rootDir": "./", // or leave as is and adjust include accordingly
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
-  }
+  },
+  "include": ["src", "prisma"]
 }
