--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -20,7 +20,8 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "pg": "^8.14.1",
-    "prisma": "^6.5.0"
+    "prisma": "^6.5.0",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
