--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -17,9 +17,11 @@
     "@heroicons/react": "^2.2.0",
     "@reduxjs/toolkit": "^2.6.1",
     "@tailwindcss/vite": "^4.0.17",
+    "@types/react-datepicker": "^6.2.0",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.486.0",
     "react": "^19.1.0",
+    "react-datepicker": "^8.2.1",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
