--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -21,7 +21,8 @@
     "express": "^4.21.2",
     "pg": "^8.14.1",
     "prisma": "^6.5.0",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "ws": "^8.18.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
