--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -7,7 +7,8 @@
     "dev": "nodemon --watch src --exec ts-node src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+     "test": "jest --forceExit --detectOpenHandles --coverage",
+    "test:watch": "jest --watch --forceExit --detectOpenHandles",
     "seed": "ts-node prisma/seed.ts"
   },
   "keywords": [],
