--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -24,6 +24,7 @@
     "@tailwindcss/vite": "^4.0.17",
     "@types/react-datepicker": "^6.2.0",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.6.3",
     "lucide-react": "^0.486.0",
     "react": "^19.1.0",
     "react-datepicker": "^8.2.1",
