--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "dev": "nodemon --watch src --exec ts-node src/index.ts",
     "build": "tsc",
+    "lint": "eslint . --ext .ts,.tsx",
+    "format": "prettier --write .",
     "start": "node dist/index.js",
     "test": "jest --forceExit --detectOpenHandles --coverage",
     "test:watch": "jest --watch --forceExit --detectOpenHandles",
