--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon --watch src --exec ts-node src/index.ts",
-    "build": "tsc && prisma generate",
+    "build": "tsc --skipLibCheck --noEmitOnError --outDir dist",
+    "start": "node dist/index.js",
     "typecheck": "tsc --noEmit",
-    "start": "node -r dotenv/config dist/index.js",
     "test": "jest --forceExit --detectOpenHandles --coverage",
     "test:watch": "jest --watch --forceExit --detectOpenHandles",
     "seed": "ts-node prisma/seed.ts"
