--- a/packages/backend/tsconfig.json
+++ b/packages/backend/tsconfig.json
@@ -2,12 +2,12 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "commonjs",
-    "outDir": "./dist",
+    "outDir": "./packages/backend/dist",
     "rootDir": "./",
     "strict": false,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["src", "prisma"]
+  "include": ["packages/backend/src/**/*", "prisma/**/*"]
 }
